crates/rome_formatter/tests/specs/prettier/js/objects/expand.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: expand.js

---
# Input
```js
const Component1 = ({ props }) => (
  <Text>Test</Text>
);

const Component2 = ({
  props
}) => (
  <Text>Test</Text>
);

```

# Output
```js
const Component1 = ({ props }) => (
  <Text>Test</Text>
);

const Component2 = ({
  props
}) => (
  <Text>Test</Text>
);

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ expand.js:2:3
  │
2 │   <Text>Test</Text>
  │   ^^^^^^^^^^ TypeScript only syntax

error: unterminated regex literal
  ┌─ expand.js:2:20
  │
2 │   <Text>Test</Text>
  │              -     ^ ...but the line ends here
  │              │     
  │              a regex literal starts there...

error[SyntaxError]: expected an expression but instead found ')'
  ┌─ expand.js:3:1
  │
3 │ );
  │ ^ Expected an expression here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ expand.js:8:3
  │
8 │   <Text>Test</Text>
  │   ^^^^^^^^^^ TypeScript only syntax

error: unterminated regex literal
  ┌─ expand.js:8:20
  │
8 │   <Text>Test</Text>
  │              -     ^ ...but the line ends here
  │              │     
  │              a regex literal starts there...

error[SyntaxError]: expected an expression but instead found ')'
  ┌─ expand.js:9:1
  │
9 │ );
  │ ^ Expected an expression here


```


